--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,6 +4,10 @@ body {
 
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
+
+    &.modal-open {
+        overflow: hidden;
+    }
 }
 
 header {
