--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,8 +5,6 @@
     @media screen and (min-width: $desktop) {
         display: flex;
         flex-direction: column;
-        padding-top: 58px;
-        padding-bottom: 62px;
     }
 }
 
@@ -34,7 +32,7 @@
     display: flex;
     flex-direction: column;
 
-    @media screen and (min-width: $tablet) {
+    @media (min-width: $tablet) and (max-width: $desktop) {
         margin-bottom: 60px;
     }
 }
