--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,23 +1,27 @@
 .header {
-    position: relative;
+    // position: relative;
     display: flex;
     align-items: center;
+    // width: 100%;
 
     height: 80px;
+
+    @media screen and (max-width: $tablet) {
+        height: 60px;
+    }
 
     @media screen and (max-width: $desktop) {
         justify-content: space-between;
         padding-top: 10px;
         padding-bottom: 10px;
-        width: 100%;
     }
 }
 
 .header-nav {
-    width: 100%;
     @media screen and (min-width: $tablet) {
         display: flex;
         align-items: center;
+        width: 100%;
     }
 
     @media screen and (max-width: $tablet) {
@@ -27,11 +31,13 @@
         &.is-open {
             display: block;
         }
+
         position: absolute;
         top: 0;
         left: 0;
         background-color: #ffffff;
-        width: 100%;
+        width: 100vw;
+        height: 100vh;
         padding-top: 48px;
         padding-bottom: 48px;
     }
@@ -180,6 +186,9 @@
 
     font-weight: 500;
     letter-spacing: 0.02em;
+
+    font-size: 12px;
+    line-height: 1.16;
 
     fill: #757575;
     align-items: center;
