--- a/sass/components/main-page/_feature.scss
+++ b/sass/components/main-page/_feature.scss
@@ -59,7 +59,7 @@
     text-align: center;
     text-transform: uppercase;
 
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: $tablet) {
         text-align: left;
         text-transform: uppercase;
     }
