--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -22,6 +22,7 @@
         display: flex;
         align-items: center;
         width: 100%;
+        justify-content: space-between;
     }
 
     @media screen and (max-width: $tablet) {
@@ -29,7 +30,9 @@
         z-index: 10;
 
         &.is-open {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         position: absolute;
@@ -51,7 +54,7 @@
 
 .site-nav {
     @media screen and (max-width: $tablet) {
-        margin-bottom: 150px;
+        // margin-bottom: 150px;
     }
 
     @media screen and (min-width: $tablet) {
