--- a/sass/components/portfolio-page/_portfolio-list.scss
+++ b/sass/components/portfolio-page/_portfolio-list.scss
@@ -25,7 +25,6 @@
     }
 
     @media screen and (min-width: $desktop) {
-        width: 370px;
         margin-right: 30px;
         margin-bottom: 30px;
 
@@ -79,6 +78,10 @@
     .portfolio-items__link:focus & {
         opacity: 1;
         transform: translateY(0%);
+    }
+
+    @media (min-width: 768px) and (max-width: 1199px) {
+        padding: 49px 24px;
     }
 }
 
