--- a/css/main.css
+++ b/css/main.css
@@ -83,12 +83,12 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80px;
+  height: 60px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .header {
-    height: 60px;
+    height: 80px;
   }
 }
 
@@ -102,6 +102,32 @@ footer {
   }
 }
 
+.header-nav {
+  display: none;
+}
+
+.header-nav.is-open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
 @media screen and (min-width: 768px) {
   .header-nav {
     display: -webkit-box;
@@ -111,33 +137,6 @@ footer {
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .header-nav {
-    display: none;
-    z-index: 10;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
-    width: 100vw;
-    height: 100vh;
-    padding-top: 48px;
-    padding-bottom: 48px;
-  }
-  .header-nav.is-open {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -167,17 +166,17 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .site-nav__item {
-    margin-left: 50px;
-  }
-  .site-nav__item:first-child {
-    margin-left: 0;
-  }
+.site-nav__item {
+  margin-bottom: 32px;
 }
 
-@media screen and (min-width: 1200px) {
+.site-nav .site-nav__item:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
   .site-nav__item {
+    margin-bottom: 0;
     margin-left: 50px;
   }
   .site-nav__item:first-child {
@@ -187,33 +186,26 @@ footer {
 
 .site-nav__link {
   position: relative;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: #212121;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  padding-left: 40px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .site-nav__link {
-    position: relative;
-    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-weight: 500;
-    font-size: 40px;
-    line-height: 1.18;
-    padding-left: 40px;
-    letter-spacing: 0.02em;
-  }
-  .site-nav__link:first-child {
-    padding-top: 0;
-  }
-  .site-nav__item:last-child .site-nav__link {
-    padding-bottom: 0;
+    font-size: 14px;
+    line-height: 1.14;
+    padding-left: 0;
   }
 }
 
@@ -265,27 +257,35 @@ footer {
 
 .address {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  padding-left: 40px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .address {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    margin: 0;
+    padding-left: 0;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    padding-left: 40px;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .address {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     margin: 0;
+    padding-left: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -297,8 +297,8 @@ footer {
   text-decoration: none;
   font-weight: 500;
   letter-spacing: 0.02em;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 34px;
+  line-height: 1.18;
   fill: #757575;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -309,22 +309,26 @@ footer {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .address__item:first-child {
-    margin-bottom: 10px;
-  }
+.address__item:last-child {
+  margin-bottom: 32px;
 }
 
-@media screen and (max-width: 768px) {
-  .address__item:last-child {
-    font-size: 34px;
-    line-height: 1.18;
-    margin-bottom: 32px;
+.address__item:first-child {
+  font-size: 24px;
+  margin-bottom: 65px;
+}
+
+@media screen and (min-width: 768px) {
+  .address__item {
+    line-height: 1.16;
+    font-size: 12px;
   }
   .address__item:first-child {
-    font-size: 24px;
-    line-height: 1.17;
-    margin-bottom: 65px;
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
+  .address__item:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -336,6 +340,7 @@ footer {
   }
   .address__item:first-child {
     margin-bottom: 0;
+    font-size: 14px;
   }
 }
 
@@ -348,13 +353,13 @@ footer {
 }
 
 .address__icon {
-  display: block;
+  display: none;
   margin-right: 8px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .address__icon {
-    display: none;
+    display: block;
   }
 }
 
@@ -369,46 +374,44 @@ footer {
   }
 }
 
-@media screen and (max-width: 768px) {
-  .social-network__items {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding-left: 40px;
-  }
+.social-network__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-left: 40px;
 }
 
-@media screen and (max-width: 768px) {
-  .social-network__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.22;
-    color: #2196f3;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-  }
-  .social-network__item:last-child .social-network__link::after {
-    display: none;
-  }
-  .social-network__link::after {
-    content: '';
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-    margin-right: 10px;
-    margin-left: 10px;
-  }
+.social-network__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196f3;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
-.header-burger {
+.social-network__item:last-child .social-network__link::after {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+.social-network__link::after {
+  content: '';
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.header-burger {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
   .header-burger {
-    display: block;
+    display: none;
   }
 }
 
