--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,12 +2,10 @@
     // position: relative;
     display: flex;
     align-items: center;
-    // width: 100%;
+    height: 60px;
 
-    height: 80px;
-
-    @media screen and (max-width: $tablet) {
-        height: 60px;
+    @media screen and (min-width: $tablet) {
+        height: 80px;
     }
 
     @media screen and (max-width: $desktop) {
@@ -18,23 +16,13 @@
 }
 
 .header-nav {
-    @media screen and (min-width: $tablet) {
+    display: none;
+
+    &.is-open {
         display: flex;
-        align-items: center;
-        width: 100%;
+        flex-direction: column;
         justify-content: space-between;
-    }
-
-    @media screen and (max-width: $tablet) {
-        display: none;
         z-index: 10;
-
-        &.is-open {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
         position: absolute;
         top: 0;
         left: 0;
@@ -45,6 +33,13 @@
         padding-bottom: 48px;
     }
 
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: space-between;
+    }
+
     @media screen and (min-width: $desktop) {
         display: flex;
         align-items: center;
@@ -53,10 +48,6 @@
 }
 
 .site-nav {
-    @media screen and (max-width: $tablet) {
-        // margin-bottom: 150px;
-    }
-
     @media screen and (min-width: $tablet) {
         display: flex;
         margin-left: 88px;
@@ -64,15 +55,16 @@
 }
 
 .site-nav__item {
-    @media screen and (min-width: $tablet) {
-        margin-left: 50px;
-        &:first-child {
-            margin-left: 0;
-        }
+    margin-bottom: 32px;
+
+    .site-nav &:last-child {
+        margin-bottom: 0;
     }
 
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 0;
         margin-left: 50px;
+
         &:first-child {
             margin-left: 0;
         }
@@ -81,35 +73,34 @@
 
 .site-nav__link {
     position: relative;
-    padding-top: 32px;
-    padding-bottom: 32px;
-
     color: $title-text-color;
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (max-width: $tablet) {
-        position: relative;
-        display: block;
+    display: block;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    padding-left: 40px;
+
+    @media screen and (min-width: $tablet) {
+        padding-top: 32px;
+        padding-bottom: 32px;
+
         font-weight: 500;
-        font-size: 40px;
-        line-height: 1.18;
-        padding-left: 40px;
-        letter-spacing: 0.02em;
+        font-size: 14px;
+        line-height: 1.14;
+        padding-left: 0;
 
-        &:first-child {
-            padding-top: 0;
-        }
+        // &:first-child {
+        //     padding-top: 0;
+        // }
 
-        .site-nav__item:last-child & {
-            padding-bottom: 0;
-        }
+        // .site-nav__item:last-child & {
+        //     padding-bottom: 0;
+        // }
     }
 
     &:hover,
@@ -168,16 +159,20 @@
 
 .address {
     margin-left: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    padding-left: 40px;
 
-    @media screen and (max-width: $tablet) {
-        display: flex;
-        flex-direction: column-reverse;
-        padding-left: 40px;
+    @media screen and (min-width: $tablet) {
+        margin: 0;
+        padding-left: 0;
+        flex-direction: column;
     }
 
     @media screen and (min-width: $desktop) {
-        display: flex;
         margin: 0;
+        padding-left: 0;
+        flex-direction: row;
     }
 }
 
@@ -189,9 +184,9 @@
 
     font-weight: 500;
     letter-spacing: 0.02em;
+    font-size: 34px;
 
-    font-size: 12px;
-    line-height: 1.16;
+    line-height: 1.18;
 
     fill: #757575;
     align-items: center;
@@ -200,23 +195,26 @@
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: $tablet) {
-        &:first-child {
-            margin-bottom: 10px;
-        }
+    &:last-child {
+        margin-bottom: 32px;
     }
 
-    @media screen and (max-width: $tablet) {
-        &:last-child {
-            font-size: 34px;
-            line-height: 1.18;
-            margin-bottom: 32px;
-        }
+    &:first-child {
+        font-size: 24px;
+        margin-bottom: 65px;
+    }
+
+    @media screen and (min-width: $tablet) {
+        line-height: 1.16;
+        font-size: 12px;
 
         &:first-child {
-            font-size: 24px;
-            line-height: 1.17;
-            margin-bottom: 65px;
+            margin-bottom: 10px;
+            font-size: 12px;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
@@ -227,6 +225,7 @@
 
         &:first-child {
             margin-bottom: 0;
+            font-size: 14px;
         }
     }
 
@@ -241,10 +240,11 @@
 }
 
 .address__icon {
-    display: block;
+    display: none;
     margin-right: 8px;
-    @media screen and (max-width: $tablet) {
-        display: none;
+
+    @media screen and (min-width: $tablet) {
+        display: block;
     }
 
     .address__item:hover &,
@@ -260,41 +260,37 @@
 }
 
 .social-network__items {
-    @media screen and (max-width: $tablet) {
-        display: flex;
-        flex-wrap: wrap;
-        padding-left: 40px;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 40px;
 }
 
 .social-network__link {
-    @media screen and (max-width: $tablet) {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 1.22;
-        color: $accent-color;
-        letter-spacing: 0.02em;
-        text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    color: $accent-color;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 
-        .social-network__item:last-child &::after {
-            display: none;
-        }
+    .social-network__item:last-child &::after {
+        display: none;
+    }
 
-        &::after {
-            content: '';
-            border-right: 1px solid rgba(33, 33, 33, 0.2);
-            transform: rotate(90deg);
-            margin-right: 10px;
-            margin-left: 10px;
-        }
+    &::after {
+        content: '';
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+        transform: rotate(90deg);
+        margin-right: 10px;
+        margin-left: 10px;
     }
 }
 
 .header-burger {
-    display: none;
+    display: block;
 
-    @media screen and (max-width: $tablet) {
-        display: block;
+    @media screen and (min-width: $tablet) {
+        display: none;
     }
 }
 
